<resources>
    <string name="app_name">FunDraw</string>

    <string name="start_new">New</string>
    <string name="brush">Brush</string>
    <string name="erase">Erase</string>
    <string name="save">Save</string>
    <string name="paint">Paint</string>

    <string name="sml">Small</string>
    <string name="med">Medium</string>
    <string name="lrg">Large</string>

    <!--Dialogs-->
    <string name="save_drawing_title">Save drawing</string>
    <string name="save_drawing_question">Save drawing to device Gallery?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="brush_size">Choose Brush size:</string>
    <string name="erase_size">Choose Eraser size:</string>
    <string name="new_canvas_title">New canvas</string>
    <string name="new_canvas_question">Start new paint (you will lose the current paint)?</string>


    <!--Toasts-->
    <string name="image_saved">Drawing saved to Gallery!</string>
    <string name="image_saving_error">Oops! Image could not be saved.</string>

    <string name="banner_ad_unit_id">ca-app-pub-1227764705187744/9769371717</string>
    <string name="id_app_ads">ca-app-pub-1227764705187744~6815905314</string>
    <string name="facebook_app_id">1339734426147840</string>

</resources>
